--- a/src/htdocs/assets/css/global.css
+++ b/src/htdocs/assets/css/global.css
@@ -296,6 +296,10 @@ header button {
 	float: right;
 }
 
+header ul li a {
+	color: white;
+	text-decoration: none;
+}
 
 /****************************  START ****************************/
 
@@ -334,6 +338,10 @@ header button {
 	background-position: top left;
 	background-origin: border-box;
 	padding-top: 35px;
+}
+
+#contact .error {
+	border: 1px solid darkred;
 }
 
 
