CSS Phone Portrait

--- a/src/htdocs/assets/css/desktop.css
+++ b/src/htdocs/assets/css/desktop.css
@@ -10,6 +10,14 @@
 	margin-right: 32px;
 }
 
+fieldset {
+	width: 50%;
+	height: auto;
+	border: 0 none;
+	margin-top: 1em;
+	margin-left: 25%;
+}
+
 /***************************  ELEMENTS ***************************/
 
 section {
@@ -785,4 +793,14 @@ header button {
 
 #career .inner > img {
 	margin-top: 10%;
+}
+
+#final h1 {
+	font-family: 'chinoitcpro-bold';
+	font-size: 5em;
+	font-weight: 700;
+	line-height: 0.9em;
+	color: #ffffff;
+	text-transform: uppercase;
+	text-shadow: 0 -1px 1px #666666, 0 1px 1px #FFFFFF;
 }
