--- a/src/htdocs/assets/css/desktop.css
+++ b/src/htdocs/assets/css/desktop.css
@@ -54,8 +54,9 @@ h3 {
 }
 
 p {
-	font-family: 'chinoitcpro-light';
+	/*font-family: 'chinoitcpro-light';*/
 	font-size: 0.8em;
+	line-height: 1.5em;
 	font-weight: 100;
 }
 
