--- a/src/htdocs/assets/css/desktop.css
+++ b/src/htdocs/assets/css/desktop.css
@@ -127,6 +127,7 @@ header button {
 	margin-left: 0.15em;
 }
 
+/*
 #start a {
 	color: #ffffff;
 	font-family: 'chinoitcpro-medium';
@@ -155,6 +156,7 @@ header button {
 	top: 1px;
 
 }
+*/
 
 .slider {
 	display: inline-block;
