--- a/src/htdocs/assets/css/tablet.css
+++ b/src/htdocs/assets/css/tablet.css
@@ -118,6 +118,8 @@ header button {
 	text-shadow: 0 -1px 1px #666666, 0 1px 1px #FFFFFF;
 }
 
+/*
+
 #start a {
 	color: #ffffff;
 	font-family: 'chinoitcpro-medium';
@@ -145,6 +147,9 @@ header button {
 	position: relative;
 	top: 1px;
 }
+
+
+*/
 
 .slider .third:last-of-type {
 	margin-right: 0;
