--- a/src/htdocs/assets/css/desktop.css
+++ b/src/htdocs/assets/css/desktop.css
@@ -84,10 +84,7 @@ header li {
 }
 
 header button {
-	margin: 0;
-	padding: 0 3px 0 0;
-	position: relative;
-	top: 0;
+	display: none;
 }
 
 /****************************  START ****************************/
@@ -126,37 +123,6 @@ header button {
 #start h4 {
 	margin-left: 0.15em;
 }
-
-/*
-#start a {
-	color: #ffffff;
-	font-family: 'chinoitcpro-medium';
-	font-size: 1.1em;
-	text-decoration: none;
-	text-transform: uppercase;
-	line-height: 1.4em;
-	border-radius: 4px;
-	background-image: -webkit-linear-gradient(top, #5e5e5e, #0e0e0e);
-	background-image: -moz-linear-gradient(top, #5e5e5e, #0e0e0e);
-	background-image: -o-linear-gradient(top, #5e5e5e, #0e0e0e);
-  background-position: initial initial;
-  background-repeat: initial initial;
-	display: inline-block;
-	padding: 0 5px;
-	position: relative;
-	top: -50px;
-	left: 800px;
-}
-
-#start a img {
-	height: 14px;
-	width: auto;
-	padding: 0 0 0 5px;
-	position: relative;
-	top: 1px;
-
-}
-*/
 
 .slider {
 	display: inline-block;
