--- a/src/htdocs/assets/css/phone.css
+++ b/src/htdocs/assets/css/phone.css
@@ -710,15 +710,32 @@ header button {
 
 /****************************  FINAL ****************************/
 
+#final .inner {
+	min-height: 100%;
+}
+
 #final h1 {
 	font-family: 'chinoitcpro-bold';
-	font-size: 2em;
+	font-size: 2.5em;
 	font-weight: 700;
 	line-height: 0.9em;
 	color: #ffffff;
 	text-transform: uppercase;
 	text-shadow: 0 -1px 1px #666666, 0 1px 1px #FFFFFF;
-	margin-top: 5em;
+	position: relative;
+	z-index: 2000;
+}
+
+#final h2 {
+	position: relative;
+	z-index: 2000;
+}
+
+#final canvas {
+	max-width: 100%;
+	height: auto;
+	position: absolute;
+	top: 0;
 }
 
 
@@ -826,6 +843,12 @@ header button {
 		position: relative;
 		top: 0;
 	}
+
+	#final h1 {
+		margin-top: 2em;
+	}
+
+
 
 }
 
@@ -937,6 +960,15 @@ header button {
 		top: 35em;
 		clear: both;
 		margin-bottom: 40em;
+	}
+
+	#final h1 {
+		margin-top: 5em;
+	}
+
+	footer {
+		position: absolute;
+		bottom: 0;
 	}
 
 
