--- a/src/htdocs/assets/css/desktop.css
+++ b/src/htdocs/assets/css/desktop.css
@@ -753,6 +753,7 @@ header button {
 	background: rgba(255,255,255,0.6);
 	margin: 40px 0 0 0;
 	min-height: 20px;
+	padding-top: 2em;
 }
 
 #career .box img {
